# Vault-Engine

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  FBXImporter.cpp  Floor.prefab  HyperScript.md  README.md  asdfsadf  asset_pack.vpack  assets.vpack  backuo  build_example.sh  charmodel.fbx  compile_flags.txt  config.yaml  imgui.ini  mono_crash.0.0.json  mono_crash.0.1.json  projects.json  run.sh  run_project.sh  run_project_windows.sh  run_web.sh  run_windows.sh  rusty_metal.material  settings.vault.project  tex_slots  text.txt
api/: CMakeLists.txt
api/src/: Bloom.cpp  ExternalLinks.cpp  Font.cpp  Framebuffer.cpp  Mesh.cpp  Shader.cpp  ShadowMap.cpp  Skybox.cpp  Stats.cpp  Texture.cpp  Window.cpp
app/: CMakeLists.txt
app-project/: CMakeLists.txt
app-project/src/: main.cpp
app/src/: main.cpp
assets/: 15403e83-14c8-4d08-8efb-c89a1dc15447.vault  6a67727d-3792-4f44-9110-ace8c24f960b.vault  823b745e-d58a-4f16-b8d1-b44f9be65ce4.vault  87967c82-d5bd-42a0-9ec5-4ddfdcb7b3a9.vault  Class1.cs  Crouch To Stand.fbx  Floor.prefab  Hawk Tuah 1.prefab  Hip Hop Dancing.fbx  Jogging.fbx  My object.prefab  Never Gooner.prefab  Obstacle Bottom.prefab  Obstacle.prefab  PBR Model.prefab  Pico_Burps.xml  Point Light.prefab  Red Light.prefab  SaluteAnimation.fbx  Torch.prefab  Tree.prefab  Wall.prefab  a107591c-8149-420a-b77e-6f5c1b039f91.vault  ba7f7154-1a9f-4422-bb1d-66de7aa7bc0d.vault  charmodel.fbx  config.yaml  csharp-lib.csproj  f9fcc74a-d0eb-4857-b9eb-085b07c8e7a9.vault  hi.material  main-copy.material  main.material  model_scene.vault  music_prefab.prefab  obstacle.material  otisSpeaker.xml  pico.prefab  picoAndNene.xml  red.material  scene.vault  sdfgsdfghel.prefab  (+2 more)
assets/HYPERSCRIPT_API/: Transform.hyper
assets/VAULT_API/: Debug.cs  DevCommand.cs  Input.cs  Main.cs  Mathf.cs
assets/VAULT_API/Components/: Audio2D.cs  Camera.cs  ModelAnimator.cs  Rigidbody2D.cs  Rigidbody3D.cs  SpriteRenderer.cs  Text3D.cs  Vector3.cs
assets/models/luffy/: belt.material  body.material  cloth.material  eyebrow.material  eyes.material  face.material  hat.material  smoke.material  untitled.fbx
assets/scenes/: 3dflappy.vault  Game copy.vault  Game.vault  TestModel.vault  raaah.vault
assets/scripts/: CameraTest.cs  CheatCommand.cs  EntityTest.cs  GameManager.cs  Menu.cs  Obstacle.cs  OtherEntity.cs  Player.cs  Player3D.cs  Spin.cs  SpinOther.cs  test.as  test.hyper
assets/textures/Bricks059_2K-PNG/: Bricks059_2K-PNG.mtlx  Bricks059_2K-PNG.usdc
assets/textures/Foil002_4K-PNG/: Foil002_4K-PNG.mtlx  Foil002_4K-PNG.usdc
csharp-lib/: Class1.cs  DevCommand.cs  GameManager.cs  Menu.cs  Player.cs  csharp-lib.csproj
csharp-lib/lib/: GameObject.cs  Main.cs  Math.cs  Time.cs
default_models/: capsule.mtl  cube.mtl
engine/: CMakeLists.txt
engine/src/: Audio.cpp  Batch.cpp  CascadedShadowMap.cpp  DecomposeTransform.cpp  Discord.cpp  GameObject.cpp  GetMeshModel.cpp  HDRSkybox.cpp  Model.cpp  PostProcessing.cpp  Runtime.cpp  Scene.cpp  SceneSerialization.cpp  SimpleCalls.cpp  tinyxml.cpp
engine/src/Components/: AmbientLight.cpp  BoxCollider.cpp  BoxCollider2D.cpp  CSharpScriptComponent.cpp  CXXScriptComponent.cpp  Camera.cpp  Collider3D.cpp  DirectionalLight.cpp  HyperScriptManager.cpp  MeshRenderer.cpp  ModelAnimator.cpp  ModelRenderer.cpp  ModelRigidbody3D.cpp  PointLight.cpp  Rigidbody2D.cpp  Rigidbody3D.cpp  Spot.cpp  SpotLight.cpp  SpriteRender.cpp  SpritesheetAnimator.cpp  SpritesheetRenderer.cpp  Text3D.cpp  Transform.cpp
engine/src/Editor/: EditorLayer.cpp
engine/src/Editor/GUI/: Assets.cpp  Components.cpp  Config.cpp  Console.cpp  DeveloperConsole.cpp  Game_Scene.cpp  Hierarchy.cpp  MainGUI.cpp  MaterialInspector.cpp  MenuBar.cpp  Scene.cpp
engine/src/Input/: Input.cpp
engine/src/Mono/: CSharp.cpp  HelperFunctions.cpp
engine/src/Mono/Audio/: Functions.cpp
engine/src/Mono/Camera/: Functions.cpp
engine/src/Mono/Entity/: Functions.cpp
engine/src/Mono/Format/: Functions.cpp
engine/src/Mono/GameObject/: Functions.cpp
engine/src/Mono/Mathf/: Functions.cpp
engine/src/Mono/ModelAnimator/: Functions.cpp
engine/src/Mono/PointLight/: Functions.cpp
engine/src/Mono/Rigidbody2D/: Functions.cpp
engine/src/Mono/Rigidbody3D/: Functions.cpp
engine/src/Mono/SpriteRenderer/: Functions.cpp
engine/src/Mono/SpritesheetAnimator/: Functions.cpp
engine/src/Mono/Text3D/: Functions.cpp
engine/src/Mono/Time/: Functions.cpp
engine/src/Mono/Transform/: Functions.cpp
engine/src/Physics/: BulletPhysics.cpp
engine/src/Scripting/: AngelScript.cpp  LoadScripts.cpp  Script.cpp
hyperscript/: CMakeLists.txt
hyperscript/src/: HyperScript.cpp  MathExpr.cpp
include/: StupidFunctions.hpp  script_test.hpp  tinyxml.hpp  uuid.hpp
include/Editor/: EditorLayer.hpp
include/Engine/: Audio.hpp  Batch.hpp  CascadedShadowMap.hpp  DecomposeTransform.hpp  Discord.hpp  FBXImporter.hpp  GameObject.hpp  HDRSkybox.hpp  Model.hpp  PostProcessing.hpp  Runtime.hpp  Scene.hpp  SceneSerialization.hpp  SimpleCalls.hpp
include/ExternalApps/: Links.hpp
include/HyperScript/: HyperScript.hpp
include/Renderer/: Bloom.hpp  Font.hpp  Framebuffer.hpp  Mesh.hpp  Shader.hpp  ShadowMap.hpp  Skybox.hpp  Stats.hpp  Texture.hpp  Window.hpp
lib/: libSDL2_mixer-2.0.so.0  libSDL2_mixer-2.0.so.0.800.0  libmono-native.so.0.0.0
linux/: LaunchGame.sh  Vault Engine.sh
sandbox/: script.cpp  script.hpp
shaders/: cascaded_shadowmap.glsl  collider_gizmo.glsl  default.glsl  downsample.glsl  editor_icons.glsl  equirectToCubemap.glsl  framebuffer.glsl  hdri_irr.glsl  hdri_skybox.glsl  pbr.glsl  pbr_brdf.glsl  pbr_prefilter.glsl  shadow_map.glsl  shadow_map_point.glsl  skybox.glsl  text_shader.glsl  worker.glsl
web/content/: readme.txt
web/css/: styles.css
web/pages/: index.html
windows/: Launch.bat  LaunchGame.bat  Vault Engine.bat  build.bash  build.sh  imgui.ini
windows/assets/: hi.material  main.material  scene.vault
windows/shaders/: default copy.glsl  default.glsl  default_batch.glsl  framebuffer.glsl  shadow_map.glsl  shadow_map_point.glsl  skybox.glsl  text_shader.glsl
(+62 files in other folders)
